--- a/nginx/proxy/nginx_cache.conf
+++ b/nginx/proxy/nginx_cache.conf
@@ -1,3 +1,6 @@
+
+# iptables -t nat -A PREROUTING -i eth1 -p tcp --dst ! 192.168.1.2 --dport 80 -j DNAT --to 192.168.1.2:3128
+
 log_format  main  '$remote_addr - $remote_user [$time_local] $request '
                   '"$status" $body_bytes_sent "$http_referer" '
                   '"$http_user_agent" "$http_x_forwarded_for" '
@@ -54,14 +57,15 @@ server {
 
     error_log /usr/local/nginx/logs/$remote_addr.vkadre.proxy_error.log error;
 
+    # Все обращения к видео реврайтим
     location ~* videos/([^/]*\.flv)$ {
         set $fnname $1;
         set $mediapath "video/_vkadre";
         rewrite ^/(.*)$  /_vkadre/$fnname  last;
     }
 
+    # Ищем ролики на диске и если не нашли, то пробуем найти в интернетах
     location ~ /_vkadre {
-      # Ищем ролики на диске и есл ине нашли, то пробуем найти в интернетах
       try_files $uri /samba/media/video/_vkadre/$uri /samba/media/video/_vkadre/$fnname @proxymedia;
     }
 
@@ -69,9 +73,17 @@ server {
     location @proxymedia {
         access_log /usr/local/nginx/logs/$remote_addr.proxy_main.log main;
         error_log /usr/local/nginx/logs/$remote_addr.proxy_error.log error;
+
+        # Отдельный лог, по которому можно будет попробывать вытащить название файла
         access_log /usr/local/nginx/logs/media.proxy_main.log media;
+
+        # Скачиваем ролик
         proxy_pass   http://$host$request_uri;
+
+        # Внешний ДНС часто не работает
         resolver 127.0.0.1;
+
+        # Делаем файло-кеш
         proxy_cache_valid any 999d;
         proxy_store_access  user:rw  group:rw  all:r;
         proxy_store   /samba/media/$mediapath/$fnname;
@@ -98,16 +110,19 @@ server {
     access_log /usr/local/nginx/logs/$remote_addr.proxy_main.log main;
     error_log /usr/local/nginx/logs/$remote_addr.proxy_error.log error;
 
+    # Реврайтим обращение к роликам
     location ~ videoplayback {
         set $fnname "$arg_id.flv";
         set $mediapath "video/_youtube";
         rewrite ^/(.*)$  /_youtube/$fnname  last;
     }
+
+    # Ищем ролики на диске и если не нашли, то пробуем найти в интернетах
     location ~ /_youtube {
-        access_log /usr/local/nginx/logs/media.proxy_main.log media;
         try_files $uri /samba/media/video/_youtube/$uri  /samba/media/video/_youtube/$fnname @youtube;
     }
 
+    # Скачиваем ролик и сторим на диск
     location @youtube {
         access_log /usr/local/nginx/logs/media.proxy_main.log media;
         proxy_pass   http://$host$request_uri;
@@ -134,6 +149,7 @@ server {
     access_log /usr/local/nginx/logs/$remote_addr.proxy_main.log main;
     error_log /usr/local/nginx/logs/$remote_addr.proxy_error.log error;
 
+    # Реврайтим обращение к музыке
     location ~* ([^/]*\.mp3)$ {
       set $fnname $1;
       set $mediapath "mp3/_vkontakte";
