--- a/nginx/proxy/nginx_cache.conf
+++ b/nginx/proxy/nginx_cache.conf
@@ -8,7 +8,7 @@ log_format  main  '$remote_addr - $remote_user [$time_local] $request '
 
 log_format media '$remote_addr [$time_local] $mediapath/$host-$fnname';
 
-# Кешируем ролики с ютуба
+# Кешируем ролики с рутуба
 server{
     server_name ~^(.*\.rutube\.ru)$;
     set $sname $1;
